--- a/src/components/ui/home/Presentation.astro
+++ b/src/components/ui/home/Presentation.astro
@@ -20,7 +20,7 @@ const { class: className = "" } = Astro.props;
   </h1>
 
   <ul
-    class="flex space-x-4 *:w-11 *:rounded-xl *:p-2 *:bg-base-200 text-gray-50!"
+    class="flex space-x-4 *:w-11 *:rounded-xl *:p-2 *:bg-base-100 text-gray-50!"
   >
     <li class="">
       <a href="https://github.com/alehdezp" target="_blank">
@@ -50,7 +50,7 @@ const { class: className = "" } = Astro.props;
     <BadgePresentation class="badge-success" name="Secure Code Reviewer" />
   </div>
   <ul
-    class="grid w-auto grid-cols-1 gap-2 rounded-xl bg-base-100 px-4 py-4 xl:px-6 xl:py-8"
+    class="grid w-auto xl:mx-2 grid-cols-1 rounded-xl bg-base-100 px-4 py-4 xl:px-5 xl:py-5"
   >
     <PresentationItemList
       field_name="Email"
