--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import { siteConfig } from "@/config.js";
 ---
 
-<footer class="py-8 mt-16 mt-auto">
+<footer class="py-8 mt-8 max-sm:text-center md:mt-16">
   <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex flex-col md:flex-row justify-between items-center">
       <div class="mb-4 md:mb-0">
