--- a/src/components/ui/ThemeSwitch.astro
+++ b/src/components/ui/ThemeSwitch.astro
@@ -24,7 +24,7 @@ const themes = [
     <div
       tabindex="0"
       role="button"
-      class="btn btn-circle btn-secondary btn-soft shadow-lg hover:shadow-xl hover:scale-105 text-primary-content"
+      class="btn btn-circle btn-primary btn-shadow-lg hover:shadow-xl transition-all duration-400 hover:scale-110 text-primary-content"
       aria-label="Change theme"
       id="theme-toggle-btn"
     >
@@ -43,7 +43,7 @@ const themes = [
           <li>
             <button
               data-set-theme={theme}
-              class="theme-item capitalize justify-between hover:bg-base-300 focus:bg-base-300"
+              class="theme-item capitalize justify-between hover:bg-base-300 focus:bg-base-300 transition-all duration-400 hover:scale-110"
             >
               <span>{theme.replace("-", " ")}</span>
               {theme === "sunset" && (
