--- a/src/components/ui/blog/BlogPreview.astro
+++ b/src/components/ui/blog/BlogPreview.astro
@@ -17,9 +17,9 @@ const imageHeight = 400; // Set appropriate default height
 ---
 
 <article
-  class="group/card block w-200 rounded-xl shadow-md hover:shadow-xl border border-gray-700 transition-all duration-200 hover:bg-neutral"
+  class="group/card block w-full rounded-xl bg-base-200 shadow-md border border-gray-700 transition-all duration-200 shadow-gray-700/30 hover:shadow-xl hover:shadow-primary-500/20"
 >
-  <a href={`/blog/${post.slug}`} class="block p-4 sm:p-6">
+  <a href={`/blog/${post.slug}`} class="block p-4 sm:p-7">
     {
       image && (
         <Image
@@ -33,12 +33,13 @@ const imageHeight = 400; // Set appropriate default height
         />
       )
     }
-    <h2 class="text-xl font-bold mb-4 text-base-content">
+    <h2 class="text-2xl font-black mb-4">
       {title}
     </h2>
-    <p class="mb-4 text-lg text-gray-100">{description}</p>
-    <div class="flex justify-start items-center gap-5">
-      <PostDate date={date} />
+    <PostDate date={date} class="sm:hidden mb-4 text-sm" />
+    <p class="mb-4 text-lg text-base-content">{description}</p>
+    <div class="flex justify-start items-center sm:gap-5">
+      <PostDate date={date} class="max-sm:hidden" />
       {tags && <PostTags tags={tags} />}
     </div>
   </a>
