--- a/src/components/ui/blog/PostDate.astro
+++ b/src/components/ui/blog/PostDate.astro
@@ -3,13 +3,14 @@ import { formatDate } from "@utils/date";
 import { Icon } from "astro-icon/components";
 
 interface Props {
+  class?: string;
   date: Date;
 }
 
-const { date } = Astro.props;
+const { date, class: classList } = Astro.props;
 ---
 
-<div class="flex items-center gap-2 text-neutral-content">
+<div class:list={["flex items-center gap-2 text-neutral-content", classList]}>
   <Icon name="mdi:calendar-blank" class="inline-block w-5 h-5" />
   <time datetime={date.toISOString()} class="text-sm">
     {formatDate(date)}
