--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -63,8 +63,8 @@ try {
 ---
 
 <Layout title="Blog Posts">
-  <div class="mx-4 sm:mx-auto lg:mt-20 w-fit my-2">
-    <div class="flex justify-between items-center ml-2 mb-10">
+  <div class="mx-4 sm:mx-auto lg:mt-28 w-200 mb-20">
+    <div class="flex justify-between items-center ml-2 mb-16">
       <h1 class="text-4xl font-bold text-gray-900 dark:text-white">
         Blog Posts
       </h1>
@@ -73,7 +73,7 @@ try {
 
     {
       page.data.length > 0 ? (
-        <section class="space-y-8">
+        <section class="space-y-10">
           {page.data.map((post) => (
             <BlogPreview post={post} />
           ))}
