--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700&display=swap");
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
+@config "../../tailwind.config.mjs";
 
 @plugin "@iconify/tailwind4" {
   scale: 0;
@@ -20,6 +21,7 @@
     forest,
     black;
   exclude: typography;
+  base: false;
 }
 
 @theme {
@@ -33,7 +35,7 @@
     text-rendering: optimizeLegibility;
     @apply break-words;
     @apply antialiased;
-    /* @apply h-screen bg-gradient-to-tl from-cyan-900/80 via-teal-950/90 to-emerald-950; */
+    @apply h-screen w-full bg-base-300;
   }
 }
 
@@ -49,7 +51,7 @@
   }
 
   .card-basic {
-    @apply card bg-base-100 shadow-xl rounded-2xl p-3 2xl:p-7 lg:p-5;
+    @apply card bg-base-200 shadow-xl rounded-2xl p-3 2xl:p-7 lg:p-5;
   }
 }
 
