--- a/src/components/ui/CardProject.astro
+++ b/src/components/ui/CardProject.astro
@@ -15,7 +15,7 @@ const { title, summary, url, descriptionList, tags } = Astro.props as Props;
 <article
   class="group/card col-span-1 md:w-90 h-fit lg:w-100 lg:h-130 md:h-150 block text-left w-full rounded-xl bg-base-200 shadow-md border border-gray-700 transition-all duration-200 shadow-gray-700/30 hover:shadow-xl hover:shadow-primary-500/20"
 >
-  <a href={url} class="block sm:p-8 p-6 h-full">
+  <a href={url} class="block sm:p-8 p-6 h-full hover:text-primary">
     <div class="flex flex-col h-full mb-3">
       <div class="flex-1">
         <h2 class="text-xl sm:text-2xl font-black sm:mb-4 mb-2">
