--- a/src/components/ui/blog/BlogPreview.astro
+++ b/src/components/ui/blog/BlogPreview.astro
@@ -19,7 +19,7 @@ const imageHeight = 400; // Set appropriate default height
 <article
   class="group/card block w-full rounded-xl bg-base-200 shadow-md border border-gray-700 transition-all duration-200 shadow-gray-700/30 hover:shadow-xl hover:shadow-primary-500/20"
 >
-  <a href={`/blog/${post.slug}`} class="block p-4 sm:p-7">
+  <a href={`/blog/${post.slug}`} class="block p-4 sm:p-7 hover:text-primary">
     {
       image && (
         <Image
@@ -33,7 +33,7 @@ const imageHeight = 400; // Set appropriate default height
         />
       )
     }
-    <h2 class="text-2xl font-black mb-4">
+    <h2 class="text-2xl font-black mb-4 hover:text-primary">
       {title}
     </h2>
     <PostDate date={date} class="sm:hidden mb-4 text-sm" />
