--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -3,6 +3,7 @@ import Layout from "./Layout.astro";
 import PostDate from "@components/ui/blog/PostDate.astro";
 import PostTags from "@components/ui/blog/PostTags.astro";
 import type { CollectionEntry } from "astro:content";
+import Giscus from "@components/ui/Giscus.astro";
 
 interface Props {
   post: CollectionEntry<"blog">;
@@ -13,7 +14,7 @@ const { title, date, tags, image } = post.data;
 ---
 
 <Layout title={title}>
-  <article class="max-w-3xl w-full! text-wrap mx-auto px-4 mt-20">
+  <article class="max-w-210! w-full! text-wrap mx-auto px-6 md:px-8 mt-20">
     {
       image && (
         <img
@@ -26,20 +27,20 @@ const { title, date, tags, image } = post.data;
     }
     <header class="mb-10">
       <h1
-        class="text-4xl lg:text-5xl font-bold mb-4 text-gray-900 dark:text-gray-100"
+        class="sm:text-4xl text-3xl lg:text-5xl font-bold mb-4 text-gray-900 dark:text-gray-100"
       >
         {title}
       </h1>
       <div class="mb-4">
         <PostDate date={date} />
       </div>
-      {tags && <PostTags tags={tags} />}
+      {tags && <PostTags tags={tags} url_enabled={true} class="px-4 py-3 " />}
     </header>
     <div
       class="text-wrap prose max-w-none prose-lg md:prose-lg dark:prose-invert
        dark:prose-headings:text-gray-100
       prose-p:text-gray-700 dark:prose-p:text-gray-300
-      prose-a:text-primary-600 dark:prose-a:text-primary-400
+      prose-a:text-primary dark:prose-a:text-primary-400
       hover:prose-a:text-primary-500 dark:hover:prose-a:text-primary-300
       prose-strong:text-gray-900 dark:prose-strong:text-gray-100
       prose-code:text-gray-300 dark:prose-code:text-gray-400
@@ -51,5 +52,6 @@ const { title, date, tags, image } = post.data;
     >
       <slot />
     </div>
+    <Giscus />
   </article>
 </Layout>
