--- a/src/components/ui/blog/PostTags.astro
+++ b/src/components/ui/blog/PostTags.astro
@@ -2,18 +2,43 @@
 import { Icon } from "astro-icon/components";
 interface Props {
   tags: string[];
+  url_enabled?: boolean;
+  class?: string;
 }
 
-const { tags } = Astro.props;
+const {
+  tags,
+  url_enabled = false,
+  class: classList = "",
+} = Astro.props as Props;
 ---
 
 <div class="flex flex-wrap gap-2 items-center">
   {
-    tags.map((tag) => (
-      <p class="rounded-full text-sm badge badge-soft badge-primary text-primary-content items-center">
-        <Icon name="mdi:hashtag" class="inline-block w-3 h-3 text-primary" />
-        {tag}
-      </p>
-    ))
+    url_enabled
+      ? tags.map((tag) => (
+          <a
+            href={`/tags/${tag}`}
+            class:list={[
+              "rounded-full text-sm badge badge-soft badge-primary text-primary-content items-center text-lg md:text-[14px]",
+              classList,
+            ]}
+          >
+            <Icon
+              name="mdi:hashtag"
+              class="inline-block w-3 h-3 text-primary"
+            />
+            {tag}
+          </a>
+        ))
+      : tags.map((tag) => (
+          <p class="rounded-full text-sm badge badge-soft badge-primary text-primary-content items-center">
+            <Icon
+              name="mdi:hashtag"
+              class="inline-block w-3 h-3 text-primary"
+            />
+            {tag}
+          </p>
+        ))
   }
 </div>
