Minor UI changes and logos

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -57,10 +57,7 @@ import { siteConfig } from "@/config.js";
             ></path>
           </svg>
         </a>
-        <a
-          href="/cdn-cgi/l/email-protection#cbaab1a4beb3fbf8fafa8baca6aaa2a7e5a8a4a6"
-          aria-label="Email"
-        >
+        <a href={`mailto:${siteConfig.social.email}`} aria-label="Email">
           <svg
             class="w-6 h-6"
             fill="none"
