--- a/src/components/ui/ThemeSwitch.astro
+++ b/src/components/ui/ThemeSwitch.astro
@@ -10,6 +10,11 @@ const themes = [
   "halloween",
   "forest",
   "black",
+  "cisco",
+  "cisco-classic",
+  "cisco-highcontrast",
+  "cisco-warm",
+  "cisco-cool",
 ];
 ---
 
