--- a/src/components/ui/CardProject.astro
+++ b/src/components/ui/CardProject.astro
@@ -13,7 +13,7 @@ const { title, summary, url, descriptionList, tags } = Astro.props as Props;
 ---
 
 <article
-  class="group/card col-span-1 md:w-90 h-fit lg:w-100 lg:h-130 md:h-150 block text-left w-full rounded-xl bg-base-200 shadow-md border border-gray-700 transition-all duration-200 shadow-gray-700/30 hover:shadow-xl hover:shadow-primary-500/20"
+  class="group/card col-span-1 w-auto h-fit xl:w-100 xl:h-130 block text-left rounded-xl bg-base-200 shadow-md border border-gray-700 transition-all duration-200 shadow-gray-700/30 hover:shadow-xl hover:shadow-primary-500/20"
 >
   <a href={url} class="block sm:p-8 p-6 h-full hover:text-primary">
     <div class="flex flex-col h-full mb-3">
@@ -24,7 +24,7 @@ const { title, summary, url, descriptionList, tags } = Astro.props as Props;
         <h3 class="text-lg mb-2">{summary}</h3>
         {
           descriptionList.length > 0 && (
-            <div class="">
+            <div class="mb-3">
               <ul class="list-disc list-inside pl-3 text-base-content/80">
                 {descriptionList.map((item: string) => (
                   <li set:html={item} />
